[package]
name = "gam-spec"
version = "0.3.131"
edition = "2024"
rust-version = "1.93"
description = "Serializable model-spec types for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.17.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[lints.rust]
warnings = "deny"
